# my_fft

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  conanfile.txt  main.py  pyproject.toml  setup.py
.history/: Makefile_20241029145351  Makefile_20241029145453  Makefile_20241029145524  Makefile_20241029145627  Makefile_20241029145740  Makefile_20241029145751  Makefile_20241029145930  Makefile_20241029150022  Makefile_20241029150100  Makefile_20241029150202  Makefile_20241029150226  Makefile_20241029150251  Makefile_20241029150312  Makefile_mac_20241030153424  README_20241029140128.md  README_20241029144638.md  README_20241029144923.md  README_20241029150514.md  README_20241029150606.md  README_20241029150811.md  README_20241029150912.md  README_20241029150954.md  README_20241029162541.md  README_20241030153752.md  README_20241030153819.md  setup_20241029151349.py  setup_20241029151531.py  setup_20241029151535.py  setup_20241029152029.py  setup_20241029152044.py  setup_20241029152047.py  setup_20241029152905.py  setup_20241029153410.py  setup_20241029154201.py  setup_20241029155628.py  setup_20241029155950.py
.history/my_fft/: main_20241029163752.py
my_fft/: main.py  main.pyi
my_fft/lib/: __init__.pyi  fftpower.pyi
src/: fftpower.cpp  fftpower.cpp.bak  fftpower.h  fftpower.h.bak  fftpower_mesh.cpp  fftpower_mesh.h  mesh.cpp  mesh.h  test.cpp  vectorTools.h
test/: example.ipynb  test.ipynb  test.py  test_data.pkl.npy  test_power_1D_check.pkl  test_power_2D_check.pkl
